--- a/src/app/gifs/results/results.component.html
+++ b/src/app/gifs/results/results.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div *ngFor="let gif of results" class="col">
+  <div *ngFor="let gif of results" class="col  animate__animated animate__fadeIn  GifsAppsCards">
     <div class="card">
       <img
         [src]="gif.images.downsized_medium.url"
