adding responsive buttons to cards and a footer component in the shared folder

--- a/src/app/gifs/results/results.component.html
+++ b/src/app/gifs/results/results.component.html
@@ -1,11 +1,33 @@
 <div class="row">
-  <div *ngFor="let gif of results" class="col  animate__animated animate__fadeIn  GifsAppsCards">
-    <div class="card">
-      <img
-        [src]="gif.images.downsized_medium.url"
-        [alt]="gif.title"
-        class="card-img-top"
-      />
-    </div>
+  <div class="col" bis_skin_checked="1"*ngIf="results.length === 0">
+    Please enter the search terms to continue...
   </div>
+  <div
+      *ngFor="let gif of results"
+      class="col animate__animated animate__fadeIn GifsAppsCards"
+    >
+      <div class="card">
+        <img
+          [src]="gif.images.downsized_medium.url"
+          [alt]="gif.title"
+          class="card-img-top"
+        />
+        <div class="button-container animate__animated animate__fadeInUp">
+          <button
+            type="button"
+            class="btn btn-light btn-sm"
+            (click)="openSource(gif.images.downsized_medium.url)"
+          >
+            Open
+          </button>
+          <button
+            type="button"
+            class="btn btn-success btn-sm"
+            (click)="downloadGif(gif.images.downsized_medium.url)"
+          >
+            Download
+          </button>
+        </div>
+      </div>
+    </div>
 </div>
