--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -47,6 +47,8 @@
               href="#"
               class="list-group-item list-group-item-action"
               aria-current="true"
+              data-bs-dismiss="offcanvas"
+              aria-label="Close"
             >
               {{ item | titlecase }}
             </a>
