--- a/src/app/gifs/results/results.component.css
+++ b/src/app/gifs/results/results.component.css
@@ -1,6 +1,31 @@
 .card {
+  position: relative;
   width: 18rem;
 }
+
 .card-img-top {
+  position: relative;
   object-fit: cover;
+}
+
+.card:hover .card-img-top {
+  filter: brightness(10%); /* Aplicar el efecto de oscurecimiento solo a la imagen al hacer hover */
+  transition: filter 0.3s; /* Agregar transición para suavizar el efecto */
+}
+
+.card:hover .button-container {
+  display: block; /* Mostrar los botones al hacer hover sobre la tarjeta */
+}
+
+.button-container {
+  position: absolute;
+  top: 37.5%;
+  left: 25%;
+  transform: translate(-50%, -50%);
+  display: none; /* Ocultar los botones por defecto */
+  z-index: 1; /* Asegurar que los botones estén por encima de la imagen oscurecida */
+}
+
+.btn {
+  margin: 2px;
 }
